RESOLVED FIXED 148551
Minor fixes in reportUnexpectedSyscall
https://bugs.webkit.org/show_bug.cgi?id=148551
Summary Minor fixes in reportUnexpectedSyscall
Michael Catanzaro
Reported 2015-08-27 18:00:26 PDT
There is an off-by-one in the static assert. Also, an unsigned long long is passed in, but the parameter is an int. Then it's passed to writeUnsignedInt, which takes an unsigned int. Let's use unsigned int instead. (The value is a syscall number, so it's safe to truncate regardless -- it never be anywhere near as large as an int -- so this is just a matter of style.)
Attachments
Patch (2.31 KB, patch)
2015-08-27 18:04 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2015-08-27 18:04:12 PDT
WebKit Commit Bot
Comment 2 2015-08-28 07:23:15 PDT
Comment on attachment 260103 [details] Patch Clearing flags on attachment: 260103 Committed r189097: <http://trac.webkit.org/changeset/189097>
WebKit Commit Bot
Comment 3 2015-08-28 07:23:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.